# Basilica

./: CMakeLists.txt  README.md
Basilica/: CMakeLists.txt
Basilica/src/: Basilica.h
Basilica/src/Basilica/Core/: Application.cpp  Application.h  Base.h  Log.h  PlatformDetection.h
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
